--- a/css/css/bootstrap/bootstrap.css
+++ b/css/css/bootstrap/bootstrap.css
@@ -10,6 +10,7 @@
   --purple: #6f42c1;
   --pink: #e83e8c;
   --red: #dc3545;
+  --lime: #a8fd02;
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
