--- a/css/css/style.css
+++ b/css/css/style.css
@@ -142,7 +142,7 @@ a {
     color: #fff;
     font-weight: 700; }
     .unslate_co--site-nav .unslate_co--site-logo span {
-      color: #D63447; }
+      color: ##a8fd02; }
   .unslate_co--site-nav .site-nav-ul, .unslate_co--site-nav .site-nav-ul-none-onepage {
     text-align: center; }
     .unslate_co--site-nav .site-nav-ul, .unslate_co--site-nav .site-nav-ul > li, .unslate_co--site-nav .site-nav-ul-none-onepage, .unslate_co--site-nav .site-nav-ul-none-onepage > li {
@@ -381,11 +381,11 @@ a {
           display: block;
           color: #000; }
           .unslate_co--site-nav.scrolled .site-nav-ul > li > a:hover, .unslate_co--site-nav.scrolled .site-nav-ul-none-onepage > li > a:hover {
-            color: #D63447; }
+            color: ##a8fd02; }
           .unslate_co--site-nav.scrolled .site-nav-ul > li > a:before, .unslate_co--site-nav.scrolled .site-nav-ul-none-onepage > li > a:before {
             background: #fff; }
           .unslate_co--site-nav.scrolled .site-nav-ul > li > a.active, .unslate_co--site-nav.scrolled .site-nav-ul-none-onepage > li > a.active {
-            color: #D63447; }
+            color: ##a8fd02; }
             .unslate_co--site-nav.scrolled .site-nav-ul > li > a.active:before, .unslate_co--site-nav.scrolled .site-nav-ul-none-onepage > li > a.active:before {
               background: #fff; }
     .unslate_co--site-nav.scrolled.awake {
